[package]
name = "dreamer"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
eframe = "0.24.1"
egui = { version = "0.24.1", features = ["persistence", "serde"] }
egui_extras = "0.24.2"
epaint = "0.24.1"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
crossbeam = "0.8.2"
log = "0.4.20"
num-derive = "0.4.1"
num-traits = "0.2.17"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
anyhow = "1.0.75"
broadcaster = "1.0.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
glob = "0.3.1"
deltachat = { git = "http://github.com/deltachat/deltachat-core-rust", branch = "master" }
image = "0.24.7"

[features]
default = []
extra_debug_asserts = ["egui/extra_debug_asserts"]
extra_asserts = ["egui/extra_asserts"]

[patch.crates-io]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui = { git = "https://github.com/emilk/egui", branch = "master" }
egui_extras = { git = "https://github.com/emilk/egui", branch = "master" }
epaint = { git = "https://github.com/emilk/egui", branch = "master" }

# Always optimize dependencies.
# This does not apply to crates in the workspace.
# <https://doc.rust-lang.org/cargo/reference/profiles.html#overrides>
[profile.dev.package."*"]
opt-level = "3"