[package]
name = "dreamer"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
eframe = { version = "0.24" }
egui = { version = "0.24", features = ["persistence", "serde"] }
egui_extras = { version = "0.24" }
epaint = "0.24"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8.1"
log = "0.4.14"
num-derive = "0.3.1"
num-traits = "0.2.12"
chrono = { version = "0.4.15", features = ["serde"] }
futures = "0.3.4"
anyhow = "1.0.26"
broadcaster = "1.0.0"
dirs = "4.0"
lazy_static = "1.4.0"
glob = "0.3.0"
deltachat = { git = "http://github.com/deltachat/deltachat-core-rust", branch = "main" }
image = "0.24.1"

[features]
default = []
extra_debug_asserts = ["egui/extra_debug_asserts"]
extra_asserts = ["egui/extra_asserts"]
